--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,5 +1,5 @@
 ######################## default configuration ####################
-baseURL = "https://demo.gethugothemes.com/liva/examplesite/"
+baseURL = "https://shutasuzuki.com/"
 languageCode = "en-us"
 title = "Shuta's Homepage"
 theme = "liva-hugo"
@@ -81,7 +81,7 @@ weight = 3
 logo = "images/shuta.png"
 home = "Home"
 # Meta data
-description = "This is meta description"
+description = "This is Shuta Suzuki's website."
 author = "Shuta"
 # Google Analitycs
 googleAnalitycsID = "Your ID"
