MOD: Meta description

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -81,7 +81,7 @@ weight = 3
 logo = "images/shuta.png"
 home = "Home"
 # Meta data
-description = "This is Shuta Suzuki's website."
+description = "Official website for Shuta Suzuki, a cybersecurity professional based in New York City."
 author = "Shuta"
 # Google Analitycs
 googleAnalitycsID = "Your ID"
