MOD: Disable default sitemap generation

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -6,6 +6,7 @@ theme = "liva-hugo"
 summaryLength = "10"
 paginate = 6
 disqusShortname = ""
+disableKinds = ['sitemap']
 
 [outputs]
 home = ["HTML", "RSS", "JSON"]
