ADD: Google analytics ID

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -84,7 +84,7 @@ home = "Home"
 description = "Official website for Shuta Suzuki, a cybersecurity professional based in New York City."
 author = "Shuta"
 # Google Analitycs
-googleAnalitycsID = "Your ID"
+googleAnalitycsID = "G-D7M1480WMY"
 # Contact Information
 #mobile = "646-265-1228"
 #email = "shutas@umich.edu"
